# jackLib

./: .gitignore  .gitmodules  README.md
IDE-starter/VS2010/mocapPlayer/: mocapPlayer.vcxproj
prj/glfw_simple/: CMakeLists.txt  filesystem.h  shader5.cpp
prj/simple_render/: CMakeLists.txt
refParty/fltk-1.3.0/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~  config.h  config.status  fltk-config  fltk.list  makeinclude
src/: CMakeLists.txt~
src/dep/physics/qu3e/: CMakeLists.txt
src/simple1/: CMakeLists.txt  main.cpp
test/glfw_simple/: CMakeLists.txt  initwindow.cpp  main.cpp  shader2.cpp
